--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@ header h2 {
 }
 
 .site-footer {
-    background-image: linear-gradient(#CEC8FF, white);
+    background-image: linear-gradient(#b7a8f8, white);
     padding: 20px 0;
 }
 
