--- a/css/styles.css
+++ b/css/styles.css
@@ -50,3 +50,9 @@ header h2 {
 .carousel {
     border: solid #5637DD;
 }
+
+#carouselButton {
+    position: absolute;
+    right: 0px;
+    bottom: 0px;
+}
