--- a/css/styles.css
+++ b/css/styles.css
@@ -44,3 +44,11 @@ header h2 {
   position: absolute;
   right: 0px;
   bottom: 0px; }
+
+#reserveModal .modal-header {
+  background-color: #17A2B8;
+  color: white; }
+
+#loginModal .modal-header {
+  background-color: #901CAD;
+  color: white; }
